// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`errors.sql > line 6 1`] = `
[
  "select 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 20 1`] = `
[
  "select",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 23 1`] = `
[
  "select * from nonesuch",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "nonesuch",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 26 1`] = `
[
  "select nonesuch from pg_database",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "pg_database",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "nonesuch",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 32 1`] = `
[
  "select * from pg_database where nonesuch = pg_database.datname",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "pg_database",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "nonesuch",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
                "location": 41,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "pg_database",
                        },
                      },
                      {
                        "String": {
                          "sval": "datname",
                        },
                      },
                    ],
                    "location": 43,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 35 1`] = `
[
  "select * from pg_database where pg_database.datname = nonesuch",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "pg_database",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "pg_database",
                        },
                      },
                      {
                        "String": {
                          "sval": "datname",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
                "location": 52,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "nonesuch",
                        },
                      },
                    ],
                    "location": 54,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 38 1`] = `
[
  "select distinct on (foobar) * from pg_database",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "foobar",
                      },
                    },
                  ],
                  "location": 20,
                },
              },
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 35,
                  "relname": "pg_database",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 28,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 28,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 41 1`] = `
[
  "select null from pg_database group by datname for update",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "pg_database",
                  "relpersistence": "p",
                },
              },
            ],
            "groupClause": [
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "datname",
                      },
                    },
                  ],
                  "location": 38,
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "lockingClause": [
              {
                "LockingClause": {
                  "strength": "LCS_FORUPDATE",
                  "waitPolicy": "LockWaitBlock",
                },
              },
            ],
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Const": {
                      "isnull": true,
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 52 1`] = `
[
  "delete from nonesuch",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "nonesuch",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 62 1`] = `
[
  "drop table nonesuch",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "nonesuch",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 74 1`] = `
[
  "alter table nonesuch rename to newnonesuch",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "newnonesuch",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "nonesuch",
              "relpersistence": "p",
            },
            "relationType": "OBJECT_ACCESS_METHOD",
            "renameType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 77 1`] = `
[
  "alter table nonesuch rename to stud_emp",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "stud_emp",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "nonesuch",
              "relpersistence": "p",
            },
            "relationType": "OBJECT_ACCESS_METHOD",
            "renameType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 80 1`] = `
[
  "alter table stud_emp rename to student",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "student",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "stud_emp",
              "relpersistence": "p",
            },
            "relationType": "OBJECT_ACCESS_METHOD",
            "renameType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 83 1`] = `
[
  "alter table stud_emp rename to stud_emp",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "stud_emp",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "stud_emp",
              "relpersistence": "p",
            },
            "relationType": "OBJECT_ACCESS_METHOD",
            "renameType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 89 1`] = `
[
  "alter table nonesuchrel rename column nonesuchatt to newnonesuchatt",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "newnonesuchatt",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "nonesuchrel",
              "relpersistence": "p",
            },
            "relationType": "OBJECT_TABLE",
            "renameType": "OBJECT_COLUMN",
            "subname": "nonesuchatt",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 92 1`] = `
[
  "alter table emp rename column nonesuchatt to newnonesuchatt",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "newnonesuchatt",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "emp",
              "relpersistence": "p",
            },
            "relationType": "OBJECT_TABLE",
            "renameType": "OBJECT_COLUMN",
            "subname": "nonesuchatt",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 95 1`] = `
[
  "alter table emp rename column salary to manager",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "manager",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "emp",
              "relpersistence": "p",
            },
            "relationType": "OBJECT_TABLE",
            "renameType": "OBJECT_COLUMN",
            "subname": "salary",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 98 1`] = `
[
  "alter table emp rename column salary to ctid",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "ctid",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "emp",
              "relpersistence": "p",
            },
            "relationType": "OBJECT_TABLE",
            "renameType": "OBJECT_COLUMN",
            "subname": "salary",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 105 1`] = `
[
  "abort",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_ROLLBACK",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 108 1`] = `
[
  "end",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_COMMIT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 115 1`] = `
[
  "create aggregate newavg2 (sfunc = int4pl,
			  basetype = int4,
			  stype = int4,
			  finalfunc = int2um,
			  initcond = '0')",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 34,
                      "names": [
                        {
                          "String": {
                            "sval": "int4pl",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "sfunc",
                  "location": 26,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 58,
                      "names": [
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "basetype",
                  "location": 47,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 77,
                      "names": [
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "stype",
                  "location": 69,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 100,
                      "names": [
                        {
                          "String": {
                            "sval": "int2um",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "finalfunc",
                  "location": 88,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "0",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "initcond",
                  "location": 113,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "newavg2",
                },
              },
            ],
            "kind": "OBJECT_AGGREGATE",
            "oldstyle": true,
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 122 1`] = `
[
  "create aggregate newcnt1 (sfunc = int4inc,
			  stype = int4,
			  initcond = '0')",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 34,
                      "names": [
                        {
                          "String": {
                            "sval": "int4inc",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "sfunc",
                  "location": 26,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 56,
                      "names": [
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "stype",
                  "location": 48,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "0",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "initcond",
                  "location": 67,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "newcnt1",
                },
              },
            ],
            "kind": "OBJECT_AGGREGATE",
            "oldstyle": true,
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 137 1`] = `
[
  "drop index nonesuch",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "nonesuch",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_INDEX",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 153 1`] = `
[
  "drop aggregate newcnt (nonesuch)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 23,
                        "names": [
                          {
                            "String": {
                              "sval": "nonesuch",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objfuncargs": [
                    {
                      "FunctionParameter": {
                        "argType": {
                          "location": 23,
                          "names": [
                            {
                              "String": {
                                "sval": "nonesuch",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                        "mode": "FUNC_PARAM_DEFAULT",
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "newcnt",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_AGGREGATE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 156 1`] = `
[
  "drop aggregate nonesuch (int4)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 25,
                        "names": [
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objfuncargs": [
                    {
                      "FunctionParameter": {
                        "argType": {
                          "location": 25,
                          "names": [
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                        "mode": "FUNC_PARAM_DEFAULT",
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "nonesuch",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_AGGREGATE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 159 1`] = `
[
  "drop aggregate newcnt (float4)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 23,
                        "names": [
                          {
                            "String": {
                              "sval": "float4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objfuncargs": [
                    {
                      "FunctionParameter": {
                        "argType": {
                          "location": 23,
                          "names": [
                            {
                              "String": {
                                "sval": "float4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                        "mode": "FUNC_PARAM_DEFAULT",
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "newcnt",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_AGGREGATE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 172 1`] = `
[
  "drop function nonesuch()",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objname": [
                    {
                      "String": {
                        "sval": "nonesuch",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_FUNCTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 185 1`] = `
[
  "drop type nonesuch",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "TypeName": {
                  "location": 10,
                  "names": [
                    {
                      "String": {
                        "sval": "nonesuch",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            ],
            "removeType": "OBJECT_TYPE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 213 1`] = `
[
  "drop operator === (int4, int4)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 19,
                        "names": [
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                    {
                      "TypeName": {
                        "location": 25,
                        "names": [
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "===",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 222 1`] = `
[
  "drop operator = (nonesuch, int4)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 17,
                        "names": [
                          {
                            "String": {
                              "sval": "nonesuch",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                    {
                      "TypeName": {
                        "location": 27,
                        "names": [
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 225 1`] = `
[
  "drop operator = (int4, nonesuch)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 17,
                        "names": [
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                    {
                      "TypeName": {
                        "location": 23,
                        "names": [
                          {
                            "String": {
                              "sval": "nonesuch",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 241 1`] = `
[
  "drop rule nonesuch on noplace",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "noplace",
                      },
                    },
                    {
                      "String": {
                        "sval": "nonesuch",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_RULE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`errors.sql > line 254 1`] = `
[
  "select 1::int8/0",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "ival": {
                                "ival": 1,
                              },
                              "location": 7,
                            },
                          },
                          "location": 8,
                          "typeName": {
                            "location": 10,
                            "names": [
                              {
                                "String": {
                                  "sval": "int8",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 14,
                      "name": [
                        {
                          "String": {
                            "sval": "/",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {},
                          "location": 15,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
